# pet_project

./: README.md  pyproject.toml
prices_scrape/: scrapy.cfg
prices_scrape/prices_scrape/: items.py  middlewares.py  pipelines.py  settings.py
prices_scrape/prices_scrape/spiders/: hellogetsafe.py
tests/: test_pet_project.py
