[tool.poetry]
name = "pet_project"
version = "0.1.0"
description = ""
authors = ["Anton Shyshko <c-ashyshko@contentanalyticsinc.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pendulum = "^1.4"
Scrapy = "^2.5.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
